--- a/extension/output.css
+++ b/extension/output.css
@@ -2756,6 +2756,11 @@
       outline-style: none;
     }
   }
+  .max-md\:px-2 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 2);
+    }
+  }
 }
 .bookmark-list-container {
   padding: calc(var(--spacing) * 6);
@@ -2764,8 +2769,10 @@
 .bookmark-item {
   position: relative;
   display: flex;
+  min-width: calc(var(--spacing) * 0);
   flex-direction: row;
   align-items: stretch;
+  overflow: hidden;
   background-color: var(--color-base-100);
   transition-property: all;
   transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -2921,6 +2928,7 @@
   padding-inline: calc(var(--spacing) * 2);
   padding-top: calc(var(--spacing) * 2);
   overflow: hidden;
+  min-width: 0;
   min-height: 0 !important;
   align-content: start;
 }
@@ -2930,13 +2938,13 @@
   border: none !important;
 }
 .collapse-content.view-card {
-  grid-template-columns: repeat(auto-fill, minmax(calc(250px * var(--category-size)), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(calc(250px * var(--category-size)), 100%), 1fr));
 }
 .collapse-content.view-list {
   grid-template-columns: 1fr;
 }
 .collapse-content.view-icon {
-  grid-template-columns: repeat(auto-fill, calc(64px * var(--category-size)));
+  grid-template-columns: repeat(auto-fill, min(calc(64px * var(--category-size)), 100%));
   gap: 0.5rem;
 }
 .view-icon .bookmark-item {
@@ -2994,17 +3002,28 @@
   height: calc(20px * var(--category-size));
 }
 .view-list .bookmark-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   --tw-font-weight: var(--font-weight-normal);
   font-weight: var(--font-weight-normal);
   font-size: calc(0.875rem * var(--category-size));
+  -webkit-line-clamp: unset;
+  flex-shrink: 1;
 }
 .view-list .bookmark-info {
   flex-direction: row;
   align-items: center;
   gap: calc(var(--spacing) * 2);
+  overflow: hidden;
+}
+.view-list .bookmark-url {
+  min-width: calc(var(--spacing) * 0);
+  flex-shrink: 10;
 }
 .view-list .bookmark-timestamps {
   width: auto;
+  flex-shrink: 0;
 }
 .sort-active .bookmark-item {
   cursor: default;
@@ -3083,6 +3102,10 @@
 @media (max-width: 768px) {
   .category-row {
     flex-direction: column;
+  }
+  .bookmark-list-container {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 }
 .popup .category-row {
